# splent_feature_mailhog

./: MANIFEST.in  pyproject.toml
docker/: .env.example  docker-compose.yml
src/splent_io/splent_feature_mailhog/: __init__.py  config.py  forms.py  hooks.py  models.py  repositories.py  routes.py  seeders.py  services.py  signals.py
src/splent_io/splent_feature_mailhog/assets/js/: scripts.js  webpack.config.js
src/splent_io/splent_feature_mailhog/migrations/: env.py
src/splent_io/splent_feature_mailhog/templates/mailhog/: index.html
src/splent_io/splent_feature_mailhog/tests/e2e/: test_browser.py
src/splent_io/splent_feature_mailhog/tests/functional/: test_routes.py
src/splent_io/splent_feature_mailhog/tests/integration/: test_repositories.py
src/splent_io/splent_feature_mailhog/tests/load/: locustfile.py
src/splent_io/splent_feature_mailhog/tests/unit/: test_services.py
